--- a/bunnimage/index.html
+++ b/bunnimage/index.html
@@ -11,7 +11,12 @@
               <form id="myform" onsubmit="getImage(event)" enctype="multipart/form-data">
                   <input id="image" class="label" type="file" accept="image/x-png,image/jpeg" name="image"></input>
                   <input id="username" type="text" id="name" name="name" placeholder="Enter your file's name"/><br>
-                  <input value="Submit" type="submit" />
+                  <br>
+                  <input id="button1" value="Submitteth Thine Imahhhggge 📸" type="submit" />
+                  <br>
+                  <br>
+                  <input id="downloadusername">
+                  <input id="button2" value="Download ⤵" onclick="downloadImage()"  type="button" />
               </form>
               <br/>
               <div id="output"></div>
