--- a/catzapp/index.html
+++ b/catzapp/index.html
@@ -11,11 +11,28 @@
       <div class="c-well">
         <h1>Cat Api</h1>
         <form action="">
-          <label class="c-form-label">Name: </label>
+          <label class="c-form-label">Name 1: </label>
           <input id="name" type="text" />
+          <br>
+          <br>
+          <label class="c-form-label">Name 2: </label>
+          <input id="name" type="text" />
+          <br>
+          <br>
+          <label class="c-form-label">Name 3: </label>
+          <input id="name" type="text" />
+          <br>
+          <br>
+          <label class="c-form-label">Name 4: </label>
+          <input id="name" type="text" />
+          <br>
+          <br>
           <input type="button" value="Find a Cat" onClick="y1k3s()" />
         </form>
 
+        <img id="image"/>
+        <img id="image"/>
+        <img id="image"/>
         <img id="image"/>
       </div>
     </div>
