--- a/catzapp/index.html
+++ b/catzapp/index.html
@@ -12,28 +12,28 @@
         <h1>Cat Api</h1>
         <form action="">
           <label class="c-form-label">Name 1: </label>
-          <input id="name" type="text" />
+          <input id="name1" type="text" />
           <br>
           <br>
           <label class="c-form-label">Name 2: </label>
-          <input id="name" type="text" />
+          <input id="name2" type="text" />
           <br>
           <br>
           <label class="c-form-label">Name 3: </label>
-          <input id="name" type="text" />
+          <input id="name3" type="text" />
           <br>
           <br>
           <label class="c-form-label">Name 4: </label>
-          <input id="name" type="text" />
+          <input id="name4" type="text" />
           <br>
           <br>
           <input type="button" value="Find a Cat" onClick="y1k3s()" />
         </form>
 
-        <img id="image"/>
-        <img id="image"/>
-        <img id="image"/>
-        <img id="image"/>
+        <img id="image1"/>
+        <img id="image2"/>
+        <img id="image3"/>
+        <img id="image4"/>
       </div>
     </div>
   </body>
