--- a/catzapp/index.html
+++ b/catzapp/index.html
@@ -30,10 +30,13 @@
           <input type="button" value="Find a Cat" onClick="y1k3s()" />
         </form>
 
-        <img id="image1"/>
-        <img id="image2"/>
-        <img id="image3"/>
-        <img id="image4"/>
+        <img id="image1" src="data:image/png;base64,https://cataas.com/cat/cute/says/" alt="idk">
+
+        <img id="image2" src="data:image/png;base64,https://cataas.com/cat/cute/says/" alt="idk">
+
+        <img id="image3" src="data:image/png;base64,https://cataas.com/cat/cute/says/" alt="idk">
+        
+        <img id="image4" src="data:image/png;base64,https://cataas.com/cat/cute/says/" alt="idk">
       </div>
     </div>
   </body>
