changes to index.js file

--- a/catzapp/index.html
+++ b/catzapp/index.html
@@ -30,13 +30,13 @@
           <input type="button" value="Find a Cat" onClick="y1k3s()" />
         </form>
 
-        <img id="image1" src="data:image/png;base64,https://cataas.com/cat/cute/says/name1" alt="idk">
+        <img id="image1" src="data:image/png;base64,https://cataas.com/cat/cute/says/" alt="idk">
 
-        <img id="image2" src="data:image/png;base64,https://cataas.com/cat/cute/says/name2" alt="idk">
+        <img id="image2" src="data:image/png;base64,https://cataas.com/cat/cute/says/" alt="idk">
 
-        <img id="image3" src="data:image/png;base64,https://cataas.com/cat/cute/says/name3" alt="idk">
+        <img id="image3" src="data:image/png;base64,https://cataas.com/cat/cute/says/" alt="idk">
 
-        <img id="image4" src="data:image/png;base64,https://cataas.com/cat/cute/says/name4" alt="idk">
+        <img id="image4" src="data:image/png;base64,https://cataas.com/cat/cute/says/" alt="idk">
       </div>
     </div>
   </body>
