--- a/project/index.html
+++ b/project/index.html
@@ -8,49 +8,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Weatherology</h1>
-    <h4>"Where weather and astrology come together like the big bang trapped in a tornado"</h4>
-    <nav>
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Weather</li>
-            <li>Astrology</li>
-            <li>Contact Us</li>
-        </ul>
-    </nav>
-    <div>
-        Current location
-         <input id="button1" value="Click here" type="submit" />
-     </div>
-     <br>
-    <div>
-       Weather for today 
-        <input id="button1" value="Click here" type="submit" />
+    <div class="input">
+        <input type="text" class="inputValue" placeholder="Enter a city">
+        <input type="submit" value="submit" class="button">
     </div>
-    <br>
-    <div>
-       Astrology for today 
-        <input id="button1" value="Click here" type="Submit" />
-    </div>
-        <article>
-            <p>
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, facere excepturi consectetur temporibus repellendus accusantium quia, magni non reiciendis voluptatibus quod! Hic similique maiores, non deleniti aliquid voluptatem reiciendis cumque dolorem debitis nobis commodi corrupti quia neque autem minima. Facilis.
-            </p>
-        </article>
-        <article>
-            <p>
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, facere excepturi consectetur temporibus repellendus accusantium quia, magni non reiciendis voluptatibus quod! Hic similique maiores, non deleniti aliquid voluptatem reiciendis cumque dolorem debitis nobis commodi corrupti quia neque autem minima. Facilis, optio?
-            </p>
-        </article>
-        <article>
-            <p>
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, facere excepturi consectetur temporibus repellendus accusantium quia, magni non reiciendis voluptatibus quod! Hic similique maiores, non deleniti aliquid voluptatem reiciendis cumque dolorem debitis nobis commodi corrupti quia neque autem minima. Facilis, optio? 
-            </p>
-        </article>
-        <footer>
-            &copy; Randomystics 2021
-        </footer>
+    
+   <div class="display">
+       <h1>
+           <hl class="name"></hl>
+           <p class="desc"></p>
+           <p class="temp"></p>
+       </h1>
+   </div>
+
 </body>
 <script src="index.js"></script>
 </html>
