--- a/project/weather/index.html
+++ b/project/weather/index.html
@@ -9,17 +9,29 @@
 </head>
 <body>
     <div class="input">
-        <input type="text" class="inputValue" placeholder="Enter a city">
-        <input type="submit" value="submit" class="button">
+        <input type="text" class="inputValue" placeholder="Enter a City or State">
+        <input type="submit" value="Submit" class="button">
     </div>
-    
+
    <div class="display">
        <h1>
            <hl class="name"></hl>
            <p class="desc"></p>
            <p class="temp"></p>
        </h1>
+       <br>
+       <p class="sunrise"></p>
+      <p class="sunset"></p>
+      <br>
        <p class="days"></p>
+      <p class="feels"></p>
+      <p class="feels_morn"></p>
+      <p class="feels_eve"></p>
+      <p class="feels_night"></p>
+      <br>
+      <p class="gusty"></p>
+      <p class="humidity"></p>
+      
    </div>
 
   <!-- <select name="horoscope" id="horoscope" onchange="starSign(this.value)">
